# fwds-vpn-cli-interface

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
Docs/: PRD 2.md  PRD.md  README.md  UI-Design-System-Handoff.md  architecture.md  commands.md  controller-commands.md  controller-connection-notes.md  controller-transcript-notes.md  diagnostic-rule-parity-vs-installer-main.md  installer-main-diagnostic-rules.md  macos-openvpn-notes.md  platform-notes.md  windows-handoff.md  windows-install.md  windows-local-serial-notes.md  workflows.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  parsers.rs
src/components/shell/: Sidebar.tsx  SidebarHeader.tsx  SidebarNavItem.tsx  StatusPill.tsx
src/components/tabs/: CommandsTab.tsx  ConsoleTab.tsx  ControllerTerminalWindow.tsx  DiagnosticsTab.tsx  LedDecoderTab.tsx  LogsTab.tsx  ReportTab.tsx  SDCardTab.tsx  SessionTab.tsx  SettingsTab.tsx  SystemConfigurationTab.tsx  WizardTab.tsx  tabs.css
src/components/terminal/: TerminalPane.tsx
src/dev/: browserTauriShim.ts
src/lib/: buildReferenceRows.ts  commandActions.ts  generateReport.ts  ledDecoder.ts  parseIntake.ts  sessionReport.ts  zoneParser.ts
src/styles/: frontline-fonts.css  frontline-tokens.css
src/types/: commands.ts  config.ts  report.ts  sdcard.ts
