[package]
name = "fwds-controller-console"
version = "0.2.2"
edition = "2021"

[lib]
name = "fwds_controller_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "5"
regex = "1"
serialport = "4"
base64 = "0.22"
mdns-sd = { version = "0.20.2", default-features = false }
rsa = { version = "0.9.10", features = ["pem"] }
ssh-key = { version = "0.6.7", default-features = false, features = ["std", "rsa"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
